# pr2

./: .gitignore  README.md  scenario.py  topics and messages.txt
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
catkin_ws/devel/lib/pkgconfig/: pr2_with_supervisor.pc
catkin_ws/devel/share/pr2_with_supervisor/cmake/: pr2_with_supervisorConfig.cmake
catkin_ws/pr2_with_supervisor/: package.xml
catkin_ws/src/pr2_twoears/scripts/: scriptpr2.py  scriptpr2_r_arm.py  scriptpr2_rgba.py
catkin_ws/src/pr2_with_supervisor/: CMakeLists.txt  Scriptpr2_gotoposFULL.py  package.xml
catkin_ws/src/pr2_with_supervisor/scripts/: scriptpr2.py  scriptpr2_gotopos.py  scriptpr2_l_arm.py  scriptpr2_torso.py
gotopos/: Makefile.am  pr2_gotopos.gen  pr2_gotopos.idl
gotopos/codels/: Makefile.am  pr2_gotopos_PublishPort_codels.c  pr2_gotopos_codels.c
head/: Makefile.am  pr2_head.gen  pr2_head.idl
head/codels/: Makefile.am  pr2_head_PublishPort_codels.c  pr2_head_codels.c  pr2_head_move_codels.cc
l_arm/: Makefile.am  pr2_l_arm.gen  pr2_l_arm.idl
l_arm/codels/: Makefile.am  pr2_l_arm_codels.cc  pr2_l_arm_move_codels.c  pr2_l_arm_move_codels.cc
move_base/: Makefile.am  pr2_move_base.gen  pr2_move_base.idl
move_base/codels/: Makefile.am  pr2_move_base_codels.c  pr2_move_base_display_codels.c
pr2_full/: Makefile.am  pr2_full.gen  pr2_full.idl
pr2_full/codels/: Makefile.am  pr2_full_PublishPort_codels.c  pr2_full_VideoCamera_RGBA_codels.c  pr2_full_codels.c
r_arm/: Makefile.am  pr2_r_arm.gen  pr2_r_arm.idl  pr2_r_armStruct.idl
r_arm/codels/: Makefile.am  pr2_r_arm_codels.c  pr2_r_arm_display_codels.cc  pr2_r_arm_move_codels.c  pr2_r_arm_move_codels.cc
rgba/: Makefile.am  pr2_rgba.gen  pr2_rgba.idl
rgba/codels/: Makefile.am  pr2_rgba_ReceiveImage_codels.c  pr2_rgba_codels.c
scripts/: scriptpr2_head.py  scriptpr2_move_arm.py  scriptpr2_r_arm.py
torso/: Makefile.am  pr2_torso.gen  pr2_torso.idl
torso/codels/: Makefile.am  pr2_torso_PublishPort_codels.c  pr2_torso_codels.c  pr2_torso_codels.cc  pr2_torso_move_codels.cc
